--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,3 +25,41 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+/* task style */
+
+.bg-cool{
+  background: rgb(22, 22, 22);
+  padding-bottom: 2rem;
+ }
+ 
+ .curv{
+   width: 100%;
+   background-image: linear-gradient(225deg, rgba(212, 92, 214, 0) 0%, rgba(212, 92, 214, 0.6) 100%), linear-gradient(225deg, rgba(171, 43, 174, 0.4) 0%, rgba(171, 43, 174, 0) 100%), linear-gradient(135deg, rgb(94, 109, 238) 0%, rgba(249, 24, 128, 0) 100%), linear-gradient(135deg, rgba(209, 26, 40, 0) 0%, rgb(209, 26, 40) 100%), linear-gradient(0deg, rgb(65, 209, 51) 0%, rgb(57, 194, 212) 100%);
+   clip-path: ellipse(100% 100% at 38% 0%);
+   padding: 2rem;
+   padding-bottom: 8rem;
+ }
+ 
+ .card-zoom {
+   @apply relative flex items-center justify-center m-3 overflow-hidden  w-full h-96 rounded-2xl;
+ }
+ .card-zoom-image {
+   @apply absolute h-full transition-all duration-500 ease-in-out transform bg-center bg-cover;
+ }
+ .card-zoom:hover .card-zoom-image {
+   @apply scale-150;
+ }
+
+
+ /* profile style */
+
+.profile-page{
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 25px 45px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-right: 1px solid rgba(255, 255, 255, 0.2);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
