--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,3 +63,91 @@ body {
   border-right: 1px solid rgba(255, 255, 255, 0.2);
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
+
+
+@keyframes fade-in-up {
+  0% {
+      opacity: 0;
+      transform: translateY(100%);
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0);
+  }
+}
+
+@keyframes slide-in-left {
+  0% {
+      opacity: 0;
+      transform: translateX(-100%);
+  }
+  100% {
+      opacity: 1;
+      transform: translateX(0);
+  }
+}
+
+@keyframes slide-in-right {
+  0% {
+      opacity: 0;
+      transform: translateX(100%);
+  }
+  100% {
+      opacity: 1;
+      transform: translateX(0);
+  }
+}
+
+@keyframes fade-in-out {
+  0% {
+      opacity: 0;
+      transform: scale(0.5);
+  }
+  50% {
+      opacity: 1;
+      transform: scale(1.2);
+  }
+  100% {
+      opacity: 1;
+      transform: scale(1);
+  }
+}
+
+.animate-fade-in-out {
+  animation: fade-in-out 8s ease-out;
+}
+
+
+.animate-fade-in-up {
+  animation: fade-in-up 1.5s ease-out;
+}
+.animate-slide-in-left {
+  animation: slide-in-left 3.5s ease-out;
+}
+.animate-slide-in-right {
+  animation: slide-in-left 3.5s ease-out;
+}
+
+
+
+@media screen and (max-width:600px){
+  @keyframes fade-in-out {
+    0% {
+        opacity: 0;
+        transform: scale(0.5);
+    }
+    50% {
+        opacity: 1;
+        transform: scale(1);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(0.9);
+    }
+  }
+  
+  .animate-fade-in-out {
+    animation: fade-in-out 8s ease-out;
+  }
+  
+}
